Invitation Card First Deployment

--- a/index.html
+++ b/index.html
@@ -389,10 +389,14 @@
 
             <div class="slides">
 
-                <img loading="lazy" decoding="async" width="400" height="500" src="https://images.unsplash.com/photo-1522673607200-164d1b6ce486?auto=format&fit=crop&w=800&q=60">
-                <img loading="lazy" decoding="async" width="400" height="500" src="https://images.unsplash.com/photo-1519741497674-611481863552?auto=format&fit=crop&w=800&q=60">
-                <img loading="lazy" decoding="async" width="400" height="500" src="https://images.unsplash.com/photo-1507504031003-b417219a0fde?auto=format&fit=crop&w=800&q=60">
-                <img loading="lazy" decoding="async" width="400" height="500" src="https://images.unsplash.com/photo-1511285560929-80b456fea0bc?auto=format&fit=crop&w=800&q=60">
+                <img loading="lazy" decoding="async" width="400" height="500"
+                    src="https://images.unsplash.com/photo-1522673607200-164d1b6ce486?auto=format&fit=crop&w=800&q=60">
+                <img loading="lazy" decoding="async" width="400" height="500"
+                    src="https://images.unsplash.com/photo-1519741497674-611481863552?auto=format&fit=crop&w=800&q=60">
+                <img loading="lazy" decoding="async" width="400" height="500"
+                    src="https://images.unsplash.com/photo-1507504031003-b417219a0fde?auto=format&fit=crop&w=800&q=60">
+                <img loading="lazy" decoding="async" width="400" height="500"
+                    src="https://images.unsplash.com/photo-1511285560929-80b456fea0bc?auto=format&fit=crop&w=800&q=60">
 
             </div>
 
@@ -439,8 +443,10 @@
         <div class="card">
             <h2>Invitation</h2>
             <p><b>Host:</b> Mr. &amp; Mrs. Rajesh Zope</p>
-            <p style="font-family: 'Great Vibes', cursive; font-size: 34px; margin:10px 0;">ASHISH ZOPE<br>with<br>MADHURI PATIL</p>
-            <p style="margin-top:8px;">With great joy and love, we invite you to celebrate the wedding of our beloved children.</p>
+            <p style="font-family: 'Great Vibes', cursive; font-size: 34px; margin:10px 0;">ASHISH
+                ZOPE<br>with<br>MADHURI PATIL</p>
+            <p style="margin-top:8px;">With great joy and love, we invite you to celebrate the wedding of our beloved
+                children.</p>
             <p style="margin-top:6px;"><b>Wedding:</b> Saturday, 7 March 2026 | <b>Time:</b> 8:30 PM</p>
         </div>
 
@@ -457,7 +463,8 @@
             <p><b>Jafar Lawns, Savda</b></p>
             <p>Near ABC Chowk, Savda, Maharashtra</p>
             <p>Landmark: Opposite City Mall</p>
-            <a href="https://maps.app.goo.gl/1YybRbZBQf4GUeXo7" target="_blank" class="mapBtn">Open Location in Google Maps</a>
+            <a href="https://maps.app.goo.gl/1YybRbZBQf4GUeXo7" target="_blank" class="mapBtn">Open Location in Google
+                Maps</a>
             <!-- <div style="margin-top:12px;">
                 <img alt="Maps QR" src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=https://maps.app.goo.gl/1YybRbZBQf4GUeXo7" style="border-radius:8px;" />
             </div> -->
@@ -468,7 +475,8 @@
             <p>Please confirm your attendance by <b>25 February 2026</b>.</p>
             <p><b>Ashish:</b> +91 77440 46830</p>
             <p><b>Madhuri:</b> +91 91234 56789</p>
-            <a href="https://wa.me/917744046830?text=Hello%20Ashish%20and%20Madhuri!%20I%20confirm%20my%20attendance." target="_blank" class="mapBtn">RSVP on WhatsApp</a>
+            <a href="https://wa.me/917744046830?text=Hello%20Ashish%20and%20Madhuri!%20I%20confirm%20my%20attendance."
+                target="_blank" class="mapBtn">RSVP on WhatsApp</a>
         </div>
 
         <div class="card">
@@ -479,7 +487,9 @@
         </div>
 
         <button class="openBtn" onclick="showPopup()">Open Special Message</button>
-        <button id="sprinkleToggle" class="openBtn" style="display:none;padding:10px 22px;margin-left:10px;font-size:15px;" onclick="startFullSprinkle()">Enable Sprinkles</button>
+        <button id="sprinkleToggle" class="openBtn"
+            style="display:none;padding:10px 22px;margin-left:10px;font-size:15px;" onclick="startFullSprinkle()">Enable
+            Sprinkles</button>
 
     </div>
 
@@ -501,9 +511,15 @@
 
     <!-- FLOAT PHOTOS -->
 
-    <img loading="lazy" decoding="async" width="80" height="80" src="https://images.unsplash.com/photo-1522673607200-164d1b6ce486?auto=format&fit=crop&w=200&q=60" class="floatPhoto" style="left:10%">
-    <img loading="lazy" decoding="async" width="80" height="80" src="https://images.unsplash.com/photo-1519741497674-611481863552?auto=format&fit=crop&w=200&q=60" class="floatPhoto" style="left:80%">
-    <img loading="lazy" decoding="async" width="80" height="80" src="https://images.unsplash.com/photo-1507504031003-b417219a0fde?auto=format&fit=crop&w=200&q=60" class="floatPhoto" style="left:50%">
+    <img loading="lazy" decoding="async" width="80" height="80"
+        src="https://images.unsplash.com/photo-1522673607200-164d1b6ce486?auto=format&fit=crop&w=200&q=60"
+        class="floatPhoto" style="left:10%">
+    <img loading="lazy" decoding="async" width="80" height="80"
+        src="https://images.unsplash.com/photo-1519741497674-611481863552?auto=format&fit=crop&w=200&q=60"
+        class="floatPhoto" style="left:80%">
+    <img loading="lazy" decoding="async" width="80" height="80"
+        src="https://images.unsplash.com/photo-1507504031003-b417219a0fde?auto=format&fit=crop&w=200&q=60"
+        class="floatPhoto" style="left:50%">
 
 
     <script>
@@ -611,7 +627,7 @@
                 if (window.matchMedia && window.matchMedia('(prefers-reduced-motion: reduce)').matches) return true;
                 const conn = navigator.connection || navigator.mozConnection || navigator.webkitConnection;
                 if (conn && conn.effectiveType) {
-                    const slow = ['slow-2g','2g','3g'];
+                    const slow = ['slow-2g', '2g', '3g'];
                     if (slow.includes(conn.effectiveType)) return true;
                 }
                 if (navigator.deviceMemory && navigator.deviceMemory < 1.5) return true;
@@ -622,7 +638,7 @@
         }
         window.isLowPower = isLowPower;
 
-        (function() {
+        (function () {
             const canvas = document.getElementById('fireworksCanvas');
             const ctx = canvas.getContext('2d');
             let particles = [];
@@ -648,7 +664,7 @@
                     x: x,
                     y: y,
                     vx: Math.cos(angle) * speed * (0.3 + Math.random()),
-                    vy: Math.sin(angle) * speed * (0.3 + Math.random()) - (opts.upward?1:0),
+                    vy: Math.sin(angle) * speed * (0.3 + Math.random()) - (opts.upward ? 1 : 0),
                     life: 40 + Math.floor(Math.random() * 40),
                     age: 0,
                     color: Math.floor(Math.random() * 360),
@@ -657,17 +673,17 @@
                 }, opts));
             }
 
-            function addBurst(x, y, count, heartChance=0.15) {
+            function addBurst(x, y, count, heartChance = 0.15) {
                 for (let i = 0; i < count; i++) {
                     const isHeart = Math.random() < heartChance;
-                    addParticle(x + (Math.random()-0.5)*80, y + (Math.random()-0.5)*60, { type: isHeart ? 'heart' : 'dot', size: isHeart?8:2.8, upward: Math.random()>.5 });
+                    addParticle(x + (Math.random() - 0.5) * 80, y + (Math.random() - 0.5) * 60, { type: isHeart ? 'heart' : 'dot', size: isHeart ? 8 : 2.8, upward: Math.random() > .5 });
                 }
             }
 
             function drawHeart(ctx, x, y, size, color, alpha) {
                 ctx.save();
                 ctx.translate(x, y);
-                ctx.scale(size/10, size/10);
+                ctx.scale(size / 10, size / 10);
                 ctx.beginPath();
                 ctx.moveTo(0, -5);
                 ctx.bezierCurveTo(5, -18, 25, -10, 0, 18);
@@ -720,7 +736,7 @@
                         drawHeart(ctx, p.x, p.y, p.size, p.color, alpha);
                     } else {
                         ctx.beginPath();
-                        ctx.arc(p.x, p.y, p.size, 0, Math.PI*2);
+                        ctx.arc(p.x, p.y, p.size, 0, Math.PI * 2);
                         ctx.fillStyle = `hsla(${p.color},90%,60%,${alpha})`;
                         ctx.fill();
                     }
