--- a/index.html
+++ b/index.html
@@ -389,15 +389,27 @@
 
             <div class="slides">
 
-                <img loading="lazy" decoding="async" width="400" height="500"
+                <!-- <img loading="lazy" decoding="async" width="400" height="500"
                     src="https://images.unsplash.com/photo-1522673607200-164d1b6ce486?auto=format&fit=crop&w=800&q=60">
                 <img loading="lazy" decoding="async" width="400" height="500"
                     src="https://images.unsplash.com/photo-1519741497674-611481863552?auto=format&fit=crop&w=800&q=60">
                 <img loading="lazy" decoding="async" width="400" height="500"
                     src="https://images.unsplash.com/photo-1507504031003-b417219a0fde?auto=format&fit=crop&w=800&q=60">
                 <img loading="lazy" decoding="async" width="400" height="500"
-                    src="https://images.unsplash.com/photo-1511285560929-80b456fea0bc?auto=format&fit=crop&w=800&q=60">
+                    src="https://images.unsplash.com/photo-1511285560929-80b456fea0bc?auto=format&fit=crop&w=800&q=60"> -->
 
+                <img loading="lazy" decoding="async" width="400" height="500" src="./Photos/Ashish_001.jpg">
+                <img loading="lazy" decoding="async" width="400" height="500" src="./Photos/Ashish_002.jpg">
+                <img loading="lazy" decoding="async" width="400" height="500" src="./Photos/Ashish_003.jpg">
+                <img loading="lazy" decoding="async" width="400" height="500" src="./Photos/Ashish_003.jpg">
+                <img loading="lazy" decoding="async" width="400" height="500" src="./Photos/Ashish_003.jpg">
+                <img loading="lazy" decoding="async" width="400" height="500" src="./Photos/Ashish_001.jpg">
+                <img loading="lazy" decoding="async" width="400" height="500" src="./Photos/Ashish_002.jpg">
+                <img loading="lazy" decoding="async" width="400" height="500" src="./Photos/Ashish_003.jpg">
+                <img loading="lazy" decoding="async" width="400" height="500" src="./Photos/Ashish_003.jpg">
+                <img loading="lazy" decoding="async" width="400" height="500" src="./Photos/Ashish_003.jpg">
+                <!-- <img loading="lazy" decoding="async" width="400" height="500"
+                    src="https://images.unsplash.com/photo-1511285560929-80b456fea0bc?auto=format&fit=crop&w=800&q=60"> -->
             </div>
 
         </div>
@@ -511,7 +523,7 @@
 
     <!-- FLOAT PHOTOS -->
 
-    <img loading="lazy" decoding="async" width="80" height="80"
+    <!-- <img loading="lazy" decoding="async" width="80" height="80"
         src="https://images.unsplash.com/photo-1522673607200-164d1b6ce486?auto=format&fit=crop&w=200&q=60"
         class="floatPhoto" style="left:10%">
     <img loading="lazy" decoding="async" width="80" height="80"
@@ -519,8 +531,14 @@
         class="floatPhoto" style="left:80%">
     <img loading="lazy" decoding="async" width="80" height="80"
         src="https://images.unsplash.com/photo-1507504031003-b417219a0fde?auto=format&fit=crop&w=200&q=60"
-        class="floatPhoto" style="left:50%">
+        class="floatPhoto" style="left:50%"> -->
 
+    <img loading="lazy" decoding="async" width="80" height="80" src="./Photos/Ashish_001.jpg" class="floatPhoto"
+        style="left:10%">
+    <img loading="lazy" decoding="async" width="80" height="80" src="./Photos/Ashish_002.jpg" class="floatPhoto"
+        style="left:80%">
+    <img loading="lazy" decoding="async" width="80" height="80" src="./Photos/Ashish_003.jpg" class="floatPhoto"
+        style="left:50%">
 
     <script>
 
