Invitation Card First Deployment

--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
         <!-- PREMIUM INVITATION SECTIONS -->
         <div class="card">
             <h2>Invitation</h2>
-            <p><b>Host:</b> Mr. &amp; Mrs. Rajesh Zope</p>
+            <p><b>Host:</b> Mr. &amp; Mrs. Zope</p>
             <p style="font-family: 'Great Vibes', cursive; font-size: 34px; margin:10px 0;">ASHISH
                 ZOPE<br>with<br>MADHURI PATIL</p>
             <p style="margin-top:8px;">With great joy and love, we invite you to celebrate the wedding of our beloved
