Invitation Card First Deployment

--- a/index.html
+++ b/index.html
@@ -348,6 +348,13 @@
 
     <div class="container" id="mainContent">
 
+        <!-- FORMAL INVITATION HEADER -->
+        <div class="card" style="margin-top:0;border-top: 3px solid gold;">
+            <p style="font-size:12px; letter-spacing:2px;">WITH THE BLESSINGS OF THE ALMIGHTY</p>
+            <p style="margin:8px 0; font-size:14px;"><b>Mr. &amp; Mrs. Sunil Zope</b><br>request the honor of your presence<br>at the wedding ceremony of their son</p>
+            <p style="margin:8px 0; font-size:14px;"><b>Hemant Jawale &amp; Family</b><br>request the honor of your presence<br>at the wedding ceremony of their daughter</p>
+        </div>
+
         <div class="names">
             Ashish ❤️ Madhuri
         </div>
@@ -361,6 +368,7 @@
 
 
         <!-- SLIDER -->
+        <div style="margin-top:20px; text-align:center; font-size:13px; color:#ccc;">Photo Gallery</div>
 
         <div class="slider">
 
@@ -392,87 +400,85 @@
         </div>
 
 
-        <!-- DETAILS -->
-
+        <!-- WEDDING CEREMONY SUMMARY -->
         <div class="card">
-
-            <h2>Wedding Details</h2>
-
-            <p><b>Venue:</b> Jafar Lawns, Savda</p>
-            <p><b>Date:</b> 7 March 2026</p>
+            <h2>Wedding Ceremony</h2>
+            <p><b>Date:</b> Saturday, 7 March 2026</p>
             <p><b>Time:</b> 8:30 PM onwards</p>
+            <p><b>Venue:</b> Jafar Lawns, Savda</p>
+        </div>
 
+        <!-- ALL FUNCTIONS / EVENTS SCHEDULE -->
+        <div class="card">
+            <h2>Events Schedule</h2>
+            <p><b>Haldi Ceremony:</b> 6 March 2026 | 10:00 AM</p>
+            <p style="opacity:0.8; font-size:13px;">Jafar Lawns, Savda</p>
+            <p style="margin-top:10px;"><b>Mehendi:</b> 6 March 2026 | 4:00 PM</p>
+            <p style="opacity:0.8; font-size:13px;">Jafar Lawns, Savda</p>
+            <p style="margin-top:10px;"><b>Wedding Ceremony:</b> 7 March 2026 | 8:30 PM</p>
+            <p style="opacity:0.8; font-size:13px;">Jafar Lawns, Savda</p>
+            <p style="margin-top:10px;"><b>Reception &amp; Dinner:</b> 7 March 2026 | 10:00 PM onwards</p>
+            <p style="opacity:0.8; font-size:13px;">Jafar Lawns, Savda</p>
+        </div>
+
+        <!-- VENUE DETAILS -->
+        <div class="card">
+            <h2>Venue Details</h2>
+            <p><b>Venue Name:</b> Jafar Lawns, Savda</p>
+            <p><b>Address:</b> Near ABC Chowk, Savda, Maharashtra</p>
+            <p><b>Landmark:</b> Opposite City Mall</p>
             <a href="https://maps.app.goo.gl/1YybRbZBQf4GUeXo7" target="_blank" class="mapBtn">
                 Open Location in Google Maps
             </a>
-
         </div>
 
-
+        <!-- HOSTING FAMILIES -->
         <div class="card">
-
             <h2>With Blessings Of</h2>
-
             <p><b>Groom Parents:</b><br>
-                Sunil Zope & Vandana Zope<br>
+                Sunil Zope &amp; Vandana Zope<br>
                 Varangaon
             </p>
-
             <br>
-
             <p><b>Bride Parents:</b><br>
                 Hemant Jawale<br>
                 Bhalod
             </p>
-
         </div>
 
-
-        <!-- PREMIUM INVITATION SECTIONS -->
+        <!-- ACCOMMODATION &amp; TRAVEL -->
         <div class="card">
-            <h2>Invitation</h2>
-            <p><b>Host:</b> Mr. &amp; Mrs. Zope</p>
-            <p style="font-family: 'Great Vibes', cursive; font-size: 34px; margin:10px 0;">ASHISH
-                ZOPE<br>with<br>MADHURI PATIL</p>
-            <p style="margin-top:8px;">With great joy and love, we invite you to celebrate the wedding of our beloved
-                children.</p>
-            <p style="margin-top:6px;"><b>Wedding:</b> Saturday, 7 March 2026 | <b>Time:</b> 8:30 PM</p>
+            <h2>Accommodation &amp; Travel</h2>
+            <p><b>Airport:</b> Pune Airport (PNQ) - 45 km from venue</p>
+            <p><b>Accommodation:</b> Recommended hotels nearby the venue</p>
+            <p><b>Travel:</b> Cabs/Transport can be arranged on request</p>
+            <p style="margin-top:8px; opacity:0.8; font-size:13px;">For accommodation &amp; travel assistance, please contact Ashish.</p>
         </div>
 
-        <div class="card">
-            <h2>Functions</h2>
-            <p><b>Haldi Ceremony:</b> 6 March 2026 | 10:00 AM</p>
-            <p><b>Mehendi:</b> 6 March 2026 | 4:00 PM</p>
-            <p><b>Wedding Ceremony:</b> 7 March 2026 | 8:30 PM</p>
-            <p><b>Reception:</b> 7 March 2026 | 10:00 PM onwards</p>
-        </div>
-
-        <div class="card">
-            <h2>Venue</h2>
-            <p><b>Jafar Lawns, Savda</b></p>
-            <p>Near ABC Chowk, Savda, Maharashtra</p>
-            <p>Landmark: Opposite City Mall</p>
-            <a href="https://maps.app.goo.gl/1YybRbZBQf4GUeXo7" target="_blank" class="mapBtn">Open Location in Google
-                Maps</a>
-            <!-- <div style="margin-top:12px;">
-                <img alt="Maps QR" src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=https://maps.app.goo.gl/1YybRbZBQf4GUeXo7" style="border-radius:8px;" />
-            </div> -->
-        </div>
-
+        <!-- RSVP &amp; CONTACT -->
         <div class="card">
             <h2>RSVP</h2>
             <p>Please confirm your attendance by <b>25 February 2026</b>.</p>
-            <p><b>Ashish:</b> +91 77440 46830</p>
-            <p><b>Madhuri:</b> +91 91234 56789</p>
+            <p style="margin-top:8px;"><b>Ashish Zope:</b> +91 77440 46830</p>
+            <p><b>Madhuri Patil:</b> +91 91234 56789</p>
             <a href="https://wa.me/917744046830?text=Hello%20Ashish%20and%20Madhuri!%20I%20confirm%20my%20attendance."
                 target="_blank" class="mapBtn">RSVP on WhatsApp</a>
         </div>
 
+        <!-- SPECIAL NOTES &amp; GUIDANCE -->
         <div class="card">
             <h2>Notes & Guidance</h2>
             <p>Dress Code: Traditional / Ethnic</p>
             <p>Dinner to follow. Kindly avoid boxed gifts.</p>
             <p>Your presence & blessings are the best gift.</p>
+            <p style="margin-top:8px; font-size:13px; font-style:italic;">&quot;Two souls, one heart, one love forever.&quot;</p>
+        </div>
+
+        <!-- CLOSING SECTION -->
+        <div style="margin-top:40px; margin-bottom:30px; text-align:center; font-size:13px; opacity:0.8;">
+            <p>Join us as we celebrate love, family, and togetherness.</p>
+            <p style="margin-top:6px; font-style:italic;">With warm regards,</p>
+            <p style="margin-top:6px; font-family:'Great Vibes', cursive; font-size:28px;">Ashish &amp; Madhuri</p>
         </div>
 
         <button class="openBtn" onclick="showPopup()">Open Special Message</button>
@@ -749,53 +755,53 @@
             window.startFireworks = startFullSprinkle;
         })();
 
-            /* Circular slider: shift-first technique to create infinite loop without gaps */
-            function initCircularSlider() {
-                const slider = document.querySelector('.slider');
-                const slides = document.querySelector('.slides');
-                if (!slider || !slides) return;
+        /* Circular slider: shift-first technique to create infinite loop without gaps */
+        function initCircularSlider() {
+            const slider = document.querySelector('.slider');
+            const slides = document.querySelector('.slides');
+            if (!slider || !slides) return;
 
-                let isMoving = false;
-                let interval = 3000;
+            let isMoving = false;
+            let interval = 3000;
 
-                function moveOnce() {
-                    if (isMoving) return;
-                    const first = slides.firstElementChild;
-                    if (!first) return;
+            function moveOnce() {
+                if (isMoving) return;
+                const first = slides.firstElementChild;
+                if (!first) return;
 
-                    const slideWidth = slider.clientWidth;
-                    isMoving = true;
-                    slides.style.transition = 'transform 600ms ease';
-                    slides.style.transform = `translateX(-${slideWidth}px)`;
+                const slideWidth = slider.clientWidth;
+                isMoving = true;
+                slides.style.transition = 'transform 600ms ease';
+                slides.style.transform = `translateX(-${slideWidth}px)`;
 
-                    const onEnd = () => {
-                        slides.removeEventListener('transitionend', onEnd);
-                        slides.style.transition = 'none';
-                        slides.appendChild(first);
-                        slides.style.transform = 'translateX(0)';
-                        // small timeout to re-enable transitions for the next move
-                        setTimeout(() => {
-                            slides.style.transition = '';
-                            isMoving = false;
-                        }, 20);
-                    };
+                const onEnd = () => {
+                    slides.removeEventListener('transitionend', onEnd);
+                    slides.style.transition = 'none';
+                    slides.appendChild(first);
+                    slides.style.transform = 'translateX(0)';
+                    // small timeout to re-enable transitions for the next move
+                    setTimeout(() => {
+                        slides.style.transition = '';
+                        isMoving = false;
+                    }, 20);
+                };
 
-                    slides.addEventListener('transitionend', onEnd);
-                }
-
-                let timer = setInterval(moveOnce, interval);
-
-                // stop on hover to be friendly, resume on leave
-                slider.addEventListener('mouseenter', () => clearInterval(timer));
-                slider.addEventListener('mouseleave', () => timer = setInterval(moveOnce, interval));
-
-                // handle resize to ensure correct width
-                window.addEventListener('resize', () => {
-                    // no-op: widths are recalculated on each move
-                });
+                slides.addEventListener('transitionend', onEnd);
             }
 
-            document.addEventListener('DOMContentLoaded', initCircularSlider);
+            let timer = setInterval(moveOnce, interval);
+
+            // stop on hover to be friendly, resume on leave
+            slider.addEventListener('mouseenter', () => clearInterval(timer));
+            slider.addEventListener('mouseleave', () => timer = setInterval(moveOnce, interval));
+
+            // handle resize to ensure correct width
+            window.addEventListener('resize', () => {
+                // no-op: widths are recalculated on each move
+            });
+        }
+
+        document.addEventListener('DOMContentLoaded', initCircularSlider);
 
     </script>
 
