Invitation Card First Deployment

--- a/index.html
+++ b/index.html
@@ -383,16 +383,17 @@
                 <img loading="lazy" decoding="async" width="400" height="500"
                     src="https://images.unsplash.com/photo-1511285560929-80b456fea0bc?auto=format&fit=crop&w=800&q=60"> -->
 
-                <img loading="lazy" decoding="async" width="400" height="500" src="./Photos/Ashish_001.jpg">
-                <img loading="lazy" decoding="async" width="400" height="500" src="./Photos/Ashish_002.jpg">
-                <img loading="lazy" decoding="async" width="400" height="500" src="./Photos/Ashish_003.jpg">
-                <img loading="lazy" decoding="async" width="400" height="500" src="./Photos/Ashish_003.jpg">
-                <img loading="lazy" decoding="async" width="400" height="500" src="./Photos/Ashish_003.jpg">
-                <img loading="lazy" decoding="async" width="400" height="500" src="./Photos/Ashish_001.jpg">
-                <img loading="lazy" decoding="async" width="400" height="500" src="./Photos/Ashish_002.jpg">
-                <img loading="lazy" decoding="async" width="400" height="500" src="./Photos/Ashish_003.jpg">
-                <img loading="lazy" decoding="async" width="400" height="500" src="./Photos/Ashish_003.jpg">
-                <img loading="lazy" decoding="async" width="400" height="500" src="./Photos/Ashish_003.jpg">
+                <img loading="lazy" decoding="async" width="400" height="500" src="./Photos/01.jpg">
+                <img loading="lazy" decoding="async" width="400" height="500" src="./Photos/02.jpg">
+                <img loading="lazy" decoding="async" width="400" height="500" src="./Photos/03.jpg">
+                <img loading="lazy" decoding="async" width="400" height="500" src="./Photos/04.jpg">
+                <img loading="lazy" decoding="async" width="400" height="500" src="./Photos/05.jpg">
+                <img loading="lazy" decoding="async" width="400" height="500" src="./Photos/06.jpg">
+                <img loading="lazy" decoding="async" width="400" height="500" src="./Photos/07.jpg">
+                <img loading="lazy" decoding="async" width="400" height="500" src="./Photos/08.jpg">
+                <img loading="lazy" decoding="async" width="400" height="500" src="./Photos/09.jpg">
+                <img loading="lazy" decoding="async" width="400" height="500" src="./Photos/10.jpg">
+                <img loading="lazy" decoding="async" width="400" height="500" src="./Photos/11.jpg">
                 <!-- <img loading="lazy" decoding="async" width="400" height="500"
                     src="https://images.unsplash.com/photo-1511285560929-80b456fea0bc?auto=format&fit=crop&w=800&q=60"> -->
             </div>
