--- a/index.html
+++ b/index.html
@@ -284,14 +284,15 @@
             width: 350px;
             height: 400px;
             background: rgba(0, 0, 0, 0.95);
-            border: 2px solid gold;
+            /* border: 2px solid gold; */
             border-radius: 15px;
-            box-shadow: 0 0 30px rgba(255, 215, 0, 0.3);
+            /* box-shadow: 0 0 30px rgba(255, 215, 0, 0.3); */
             z-index: 1001;
             transition: right 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
             overflow: hidden;
             display: flex;
             flex-direction: column;
+            aspect-ratio: 16/9;
         }
 
         .videoModal.showVideo {
@@ -304,12 +305,12 @@
             align-items: center;
             padding: 10px 15px;
             background: rgba(0, 0, 0, 0.8);
-            border-bottom: 1px solid gold;
+            /* border-bottom: 1px solid gold; */
         }
 
         .videoModalHeader p {
             font-size: 12px;
-            color: gold;
+            /* color: gold; */
             margin: 0;
             font-weight: bold;
         }
@@ -332,7 +333,7 @@
 
         .videoModalBtn:hover {
             background: rgba(255, 255, 255, 0.1);
-            color: gold;
+            /* color: gold; */
         }
 
         .videoModalContent {
@@ -348,6 +349,30 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+        }
+
+        .videoCloseBtn {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background: rgba(0, 0, 0, 0.6);
+            border: none;
+            color: white;
+            cursor: pointer;
+            font-size: 28px;
+            width: 40px;
+            height: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+            transition: 0.3s;
+            z-index: 100;
+        }
+
+        .videoCloseBtn:hover {
+            background: rgba(255, 255, 255, 0.2);
+            color: gold;
         }
 
         /* MOBILE RESPONSIVE */
@@ -425,7 +450,7 @@
 
     <!-- PREMIUM MUSIC -->
 
-    <audio id="bgMusic" loop preload="none">
+    <audio id="bgMusic" loop preload="auto" autoplay>
         <source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_c8c8a73467.mp3" type="audio/mpeg">
     </audio>
 
@@ -610,18 +635,12 @@
 
     <!-- ENGAGEMENT TRAILER VIDEO MODAL -->
     <div class="videoModal" id="videoModal">
-        <div class="videoModalHeader">
-            <p>Engagement Trailer</p>
-            <div class="videoModalControls">
-                <button class="videoModalBtn" id="muteBtn" onclick="toggleMute()" title="Mute/Unmute">🔊</button>
-                <button class="videoModalBtn" onclick="closeVideoModal()" title="Close">✕</button>
-            </div>
-        </div>
         <div class="videoModalContent">
-            <video id="engagementVideo" playsinline controls="false" autoplay muted>
+            <video id="engagementVideo" playsinline controls="false" autoplay>
                 <source src="./Videos/engagement.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
+            <button class="videoCloseBtn" onclick="closeVideoModal()" title="Close Video">✕</button>
         </div>
     </div>
 
