--- a/index.html
+++ b/index.html
@@ -284,9 +284,9 @@
             width: 350px;
             height: 400px;
             background: rgba(0, 0, 0, 0.95);
-            /* border: 2px solid gold; */
+            border: 2px solid gold;
             border-radius: 15px;
-            /* box-shadow: 0 0 30px rgba(255, 215, 0, 0.3); */
+            box-shadow: 0 0 30px rgba(255, 215, 0, 0.3);
             z-index: 1001;
             transition: right 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
             overflow: hidden;
@@ -305,12 +305,12 @@
             align-items: center;
             padding: 10px 15px;
             background: rgba(0, 0, 0, 0.8);
-            /* border-bottom: 1px solid gold; */
+            border-bottom: 1px solid gold;
         }
 
         .videoModalHeader p {
             font-size: 12px;
-            /* color: gold; */
+            color: gold;
             margin: 0;
             font-weight: bold;
         }
@@ -333,7 +333,7 @@
 
         .videoModalBtn:hover {
             background: rgba(255, 255, 255, 0.1);
-            /* color: gold; */
+            color: gold;
         }
 
         .videoModalContent {
@@ -636,7 +636,7 @@
     <!-- ENGAGEMENT TRAILER VIDEO MODAL -->
     <div class="videoModal" id="videoModal">
         <div class="videoModalContent">
-            <video id="engagementVideo" playsinline controls="false" autoplay>
+            <video id="engagementVideo" playsinline controls="false" autoplay controlsList="nodownload" oncontextmenu="return false">
                 <source src="./Videos/engagement.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
