--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="public, max-age=31536000">
 
     <title>Wedding Invitation | Ashish ❤️ Madhuri</title>
 
@@ -432,12 +433,56 @@
 
         @media(max-width:600px) {
 
+            .popup {
+                width: 85vw;
+                padding: 20px;
+                max-width: 90%;
+            }
+
+            .popup h2 {
+                font-size: 24px;
+                margin-bottom: 8px;
+            }
+
+            .popup p {
+                font-size: 13px;
+                margin: 4px 0;
+            }
+
+            .closeBtn {
+                margin-top: 12px;
+                padding: 8px 20px;
+                font-size: 14px;
+            }
+
             .names {
                 font-size: 38px;
             }
 
             .slider {
                 height: 350px;
+            }
+
+        }
+
+        @media(max-width:400px) {
+
+            .popup {
+                width: 90vw;
+                padding: 16px;
+            }
+
+            .popup h2 {
+                font-size: 20px;
+            }
+
+            .popup p {
+                font-size: 12px;
+            }
+
+            .closeBtn {
+                padding: 7px 18px;
+                font-size: 13px;
             }
 
         }
@@ -990,6 +1035,15 @@
         }
 
         document.addEventListener('DOMContentLoaded', initCircularSlider);
+
+        /* SERVICE WORKER - CACHING */
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('sw.js').then(reg => {
+                console.log('Service Worker registered successfully:', reg);
+            }).catch(err => {
+                console.log('Service Worker registration failed:', err);
+            });
+        }
 
     </script>
 
