Invitation Card First Deployment

--- a/index.html
+++ b/index.html
@@ -525,8 +525,10 @@
         <!-- FORMAL INVITATION HEADER -->
         <div class="card" style="margin-top:0;border-top: 3px solid gold;">
             <p style="font-size:12px; letter-spacing:2px;">WITH THE BLESSINGS OF THE ALMIGHTY</p>
-            <p style="margin:8px 0; font-size:14px;"><b>Mr. &amp; Mrs. Sunil Zope</b><br>request the honor of your presence<br>at the wedding ceremony of their son</p>
-            <p style="margin:8px 0; font-size:14px;"><b>Hemant Jawale &amp; Family</b><br>request the honor of your presence<br>at the wedding ceremony of their daughter</p>
+            <p style="margin:8px 0; font-size:14px;"><b>Mr. &amp; Mrs. Sunil Zope</b><br>request the honor of your
+                presence<br>at the wedding ceremony of their son</p>
+            <p style="margin:8px 0; font-size:14px;"><b>Hemant Jawale &amp; Family</b><br>request the honor of your
+                presence<br>at the wedding ceremony of their daughter</p>
         </div>
 
         <div class="names">
@@ -627,7 +629,8 @@
             <p><b>Airport:</b> Pune Airport (PNQ) - 45 km from venue</p>
             <p><b>Accommodation:</b> Recommended hotels nearby the venue</p>
             <p><b>Travel:</b> Cabs/Transport can be arranged on request</p>
-            <p style="margin-top:8px; opacity:0.8; font-size:13px;">For accommodation &amp; travel assistance, please contact Ashish.</p>
+            <p style="margin-top:8px; opacity:0.8; font-size:13px;">For accommodation &amp; travel assistance, please
+                contact Ashish.</p>
         </div>
 
         <!-- RSVP &amp; CONTACT -->
@@ -646,7 +649,8 @@
             <p>Dress Code: Traditional / Ethnic</p>
             <p>Dinner to follow. Kindly avoid boxed gifts.</p>
             <p>Your presence & blessings are the best gift.</p>
-            <p style="margin-top:8px; font-size:13px; font-style:italic;">&quot;Two souls, one heart, one love forever.&quot;</p>
+            <p style="margin-top:8px; font-size:13px; font-style:italic;">&quot;Two souls, one heart, one love
+                forever.&quot;</p>
         </div>
 
         <!-- CLOSING SECTION -->
@@ -681,7 +685,8 @@
     <!-- ENGAGEMENT TRAILER VIDEO MODAL -->
     <div class="videoModal" id="videoModal">
         <div class="videoModalContent">
-            <video id="engagementVideo" playsinline controls="false" autoplay controlsList="nodownload" oncontextmenu="return false">
+            <video id="engagementVideo" playsinline controls="false" autoplay controlsList="nodownload"
+                oncontextmenu="return false">
                 <source src="./Videos/engagement.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
@@ -702,11 +707,11 @@
         src="https://images.unsplash.com/photo-1507504031003-b417219a0fde?auto=format&fit=crop&w=200&q=60"
         class="floatPhoto" style="left:50%"> -->
 
-    <img loading="lazy" decoding="async" width="80" height="80" src="./Photos/Ashish_001.jpg" class="floatPhoto"
+    <img loading="lazy" decoding="async" width="80" height="80" src="./Photos/11.jpg" class="floatPhoto"
         style="left:10%">
-    <img loading="lazy" decoding="async" width="80" height="80" src="./Photos/Ashish_002.jpg" class="floatPhoto"
+    <img loading="lazy" decoding="async" width="80" height="80" src="./Photos/10.jpg" class="floatPhoto"
         style="left:80%">
-    <img loading="lazy" decoding="async" width="80" height="80" src="./Photos/Ashish_003.jpg" class="floatPhoto"
+    <img loading="lazy" decoding="async" width="80" height="80" src="./Photos/09.jpg" class="floatPhoto"
         style="left:50%">
 
     <script>
