changes video model not working

--- a/index.html
+++ b/index.html
@@ -1182,7 +1182,7 @@
     </div>
 
     <!-- ENGAGEMENT TRAILER VIDEO MODAL -->
-    <div class="videoModal" id="videoModal">
+    <!-- <div class="videoModal" id="videoModal">
         <div class="videoModalContent">
             <video id="engagementVideo" playsinline controls="false" muted controlsList="nodownload"
                 oncontextmenu="return false">
@@ -1193,7 +1193,7 @@
                 <button class="skipBtn" onclick="skipVideo()">⏩ Skip</button>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- INSTAGRAM FOLLOW POPUP -->
     <div class="instagramPopup" id="instagramPopup">
